# POT3D

./: bridges2.sh  fau.sh  flake.nix  meson.build  meson_options.txt  run  submit.sh
scripts/: pot3d_validation.sh  validate
src/: pot3d.F
